# medicatel-leads

./: .dockerignore  .env.example  .gitignore  AGENT_TO_DO.md  API_CONTRACT.md  DESIGN.md  DEVELOPMENT_PLAN.md  DIRECTORY_ENRICHMENT_PLAN.md  DOCS.md  FRONTEND_DESIGN_TOKENS.md  FRONTEND_ITERATIONS.md  FRONTEND_UI_ARCHITECTURE.md  README.md  SEARCH.md  WEBSETS.md  designs.pen  docker-compose.yml  exa-api-setup-prompt.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/playwright_tool/: package-lock.json  package.json  tsconfig.json
backend/playwright_tool/src/: search.ts
backend/sql/: 001_opportunities_profile_overrides.sql  002_users_and_opportunity_owner.sql  003_lead_contact_fields.sql  004_directories.sql  005_company_enrichment_fields.sql
backend/src/medicatel_lead_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/mle/: __init__.py
backend/src/mle/api/: app.py  deps.py  routes.py  schemas.py  url_scrape_routes.py
backend/src/mle/clients/: brave_client.py  exa_client.py  gemini_client.py  llm_factory.py  openai_client.py  opencli_client.py
backend/src/mle/core/: __init__.py  config.py
backend/src/mle/db/: __init__.py  base.py  models.py
backend/src/mle/nodes/: __init__.py  auto_enrich_node.py  (+10 more)
backend/tests/: __init__.py  conftest.py  test_auth_unit.py  test_country_iso_resolution.py  test_exa_fair_num_results.py  test_lead_detail_mapping.py  test_opportunities.py  test_pipeline.py  test_profile_summary_service.py  test_query_expansion_service.py  test_relevance_filter_service.py  test_search_job_clarify_flow.py
(+84 files in other folders)
