[project]
name = "medicatel-lead-engine"
version = "0.1.0"
description = "Backend base para Medicatel Lead Engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "langsmith>=0.3.0",
  "PyJWT>=2.8.0",
  "bcrypt>=4.0.0",
  "openai>=1.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
